Pushing web pages and assets folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
         <title>Portfolio Website</title>
     </head>
     <body>
-        <h1>hi</h1>
-        <p>blah blah blah</p>
+        <div class="nav-bar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="projects.html">Projects</a></li>
+            </ul>
+        </div>
+
+        <div class="header">
+            <h1>My Portfolio Website</h1>
+            <p>This is a portfolio website that displays my projects that have been completed during my ENGCMP 0610 Class at the University of Pittsburgh</p>
+        </div>
     </body>
 </html>
