--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
     <h1>PROJECTS</h1>
     <div class="project-1">
         <h2>Project 1: Audio Narrative</h2>
+        <img src="/assets/mike-jack.jpg" alt="A mural of Michael Jackson on a New York building with a collection of colors to make up his face from young to old.">
         <audio controls><source src="/assets/projectfile.mp3"></audio>
         <p><strong>SUMMARY:</strong></p>
         <p>This project is on the life of Michael Jackson and his rise to fame from the young age of 6 up until his death at 50. 
@@ -46,6 +47,7 @@
     
     <div class="project-2">
         <h2>Project 2: Video Essay</h2>
+        <img src="/assets/social-media.jpg" alt="People in suits standing in a horizontal line on their smartphones.">
         <iframe width="960" height="600" src="https://www.youtube.com/embed/HQ4A2VpQbLI" title="Video Essay" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p><strong>SUMMARY:</strong></p>
         <p>
