Adding a cover image and resizing images

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
             <h1>My Portfolio Website</h1>
             <p>This is a portfolio website that displays my projects that have been completed during my ENGCMP 0610 Class at the University of Pittsburgh</p>
         </div>
+        <img src="/assets/cover-image.jpg" width="1020" height="600" alt="Several items such as a laptop, camera, wallet, sunglasses, keyboard, journal, Kindle, smartphone, and a camera lens on a grey wood table">
     </body>
 </html>
